Fixing small z-index issue on Nav.

--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -4,6 +4,7 @@
   padding-top: map-get($spacing, "M");
   position: fixed;
   width: 100%;
+  z-index: 100;
 
   @include bp-large {
     background: unset;
